# agentic-workbench-with-python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
plan/: development-plan.md  overview.md
python_agentic_workbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_smoke.py
workbench/: cli.py
workbench/services/: task_service.py
workbench/stores/: json_store.py
